# windows-mqtt

./: .gitignore  AGENTS.md  README.md  TODO.md  commands.example.yml  config.example.yml  index.html  package-lock.json  package.json
docs/plans/: tauri-v2.md
scripts/: prepare-frontend.js  service-install.js  service-uninstall.js  tauri-wrapper.cmd  tauri-wrapper.js
src/: config.example.js  config.js  helpers.js  index-electron.js  index.js  mqtt-bridge.js  mqtt.js  preload.js  server.js  stdin-handler.js
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  mqtt_bridge.rs
src/modules/: _module.js  audio.js  clipboard.js  commands.js  dirwatch.js  exec.js  filewatch.js  gpt.js  index.js  keys.js  midi.js  mouse.js  notify.js  obs.js  reaper.js  tabs.js  tts.js  vad.js  windows.js
