[package]
name = "pro-popstas-windows-mqtt"
version = "0.0.1"
authors = ["Stanislav Popov"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["time"] }

[profile.release]
lto = true
codegen-units = 1
